--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "framer-motion": "^6.5.0",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-password-strength-bar": "^0.4.1",
+    "react-redux": "^8.0.2",
+    "redux-toolkit": "^1.1.2"
   },
   "devDependencies": {
     "eslint": "8.19.0",
