--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.5.0",
+    "moment": "^2.29.4",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-infinite-scroll": "^0.1.5",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-password-strength-bar": "^0.4.1",
     "react-redux": "^8.0.2",
     "redux-toolkit": "^1.1.2"
